--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
            
         <div class="Foto">
             <picture>
-                <source media="(max-width: 1366px)" srcset="/assests/foto2.jpg" height="100%" width="80%">
-            <img src="/assests/foto.jpg" alt="Foto" height="120%" width="100%">
+                <source media="(max-width: 1366px)" srcset="foto2.jpg" height="100%" width="80%">
+            <img src="foto.jpg" alt="Foto" height="120%" width="100%">
             </picture>
         </div>
             <h1>João Pedro Alves de Souza Silva</h1>
